# transaction-tagging

./: .gitignore  Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/cli/: Cargo.toml
backend/cli/src/: main.rs  menu.rs
backend/cli/src/db/: convert.rs  import.rs  mod.rs  new.rs
backend/cli/src/tags/: list.rs  mod.rs  new.rs
backend/cli/src/transactions/: comment.rs  export.rs  mod.rs  tags.rs
backend/db/: Cargo.toml
backend/db/src/models/: mod.rs  tag.rs  transaction.rs
backend/utils/: Cargo.toml
backend/utils/src/: csv.rs  lib.rs
src/: main.rs
src/components/: graphs.rs  icons.rs  menu.rs  mod.rs  transaction_details.rs  transaction_list.rs  upload.rs
static/css/: tailwind.css
