[package]
name = "transaction-tagging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "backend/db" }
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
reqwasm = "0.4.1"
serde = "1.0.136"
sycamore = { version = "0.8.0-beta.6", features = ["suspense"] }
sycamore-router = "0.8.0-beta.6"
chrono = { version = "0.4", features = ["serde"] }
num-format = "0.4.0"
web-sys = { version = "0.3", features = ["Blob", "FormData", "File", "FileList", "HtmlInputElement"] }
