[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
db = { path = "../db" }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.9"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
