[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
clap = "3.1"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "sqlite"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
encoding_rs_io = "0.1"
